--- a/templates/index.html
+++ b/templates/index.html
@@ -80,11 +80,22 @@
                 </div>
             </div>
             <div class="index_img container">
-                <div class="index_img__block">
+                <div class="index_img__block_1">
                     <img src="/static/source/img/index/Rectangle 7.png" alt="">
                 </div>
-                <div class="index_img__block">
-                    <img src="/static/source/img/index/Rectangle 5.png" alt="">
+                <div class="index_img__block_2">
+                    <div class="index_img__block_2_wrapper">
+                        <div class="block__text">
+                            Ми створюємо затишок на кожній 
+                            вуличці та у кожній квартирі чи будинку
+                        </div>
+                        <img src="/static/source/img/index/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="block__text_2">
+                        <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
+                        Вишуканий чи лаконічний дизайн інтер’єру, 
+                        багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
+                    </div>
                 </div>
             </div>
         </div>
