--- a/static/development/components/common_componentc/normalize/index.scss
+++ b/static/development/components/common_componentc/normalize/index.scss
@@ -17,7 +17,7 @@ $scroll_color:  #F2C94C;
  body {
    position: relative;
    min-height: 100vh;
-   background:  #F7F7F9;
+   background: #FFFFFF;
  }
  
 *,
