--- a/static/development/components/pages/index/index.scss
+++ b/static/development/components/pages/index/index.scss
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        left: 6%;
+        left: 5%;
         &__line {
             position: absolute;
             left: 20px;
@@ -41,18 +41,61 @@
     }
     &_img {
         display: flex;
-        border: 2px solid;
-        &__block {
-            border: 1px solid #1F1B20;
+        margin-left: 20px;
+        width: calc(100% - 20px);
+        &__block_1 {
+            width: 40%;
+            border-left: 2px solid #959595;
+            border-bottom: 2px solid #959595;
             box-sizing: border-box;
             border-radius: 2px;
+            margin-top: 20px;
+            padding: 12px 0 33px 30px;
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                padding: 12px 0 33px 30px;
             }
         }
+        &__block_2 {
+            width: 40%;
+            position: absolute;
+            //top: -293px;
+            top: -50%;
+            left: 40%;
+            margin-left: 48px;
+
+            &_wrapper {
+                border: 1px solid #FFFFFF;
+                padding: 39px 36px 0 36px;
+            }
+            img {
+                margin-top: 15px;
+                width: 100%;
+                height: 100%;
+                padding-bottom: 30px;
+                object-fit: cover;
+                border-bottom: 2px solid #959595;
+            }
+            
+        }
+    }
+}
+
+.block__text {
+    max-width: 448px;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0 auto;
+    &_2 {
+        margin-top: 30px;
+        width: 100%;
+        font-size: 20px;
+        line-height: 23px;
+        color: #1F1B20;
+        padding: 0 36px;
     }
 }
 
