--- a/static/source/pages/index/index.css
+++ b/static/source/pages/index/index.css
@@ -10,7 +10,7 @@
 body {
   position: relative;
   min-height: 100vh;
-  background: #F7F7F9; }
+  background: #FFFFFF; }
 
 *,
 ::after,
@@ -1147,7 +1147,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   flex-direction: column;
   position: absolute;
-  left: 6%; }
+  left: 5%; }
   .index_social__line {
     position: absolute;
     left: 20px;
@@ -1162,16 +1162,51 @@ input::-webkit-inner-spin-button {
 
 .index_img {
   display: flex;
-  border: 2px solid; }
-  .index_img__block {
-    border: 1px solid #1F1B20;
+  margin-left: 20px;
+  width: calc(100% - 20px); }
+  .index_img__block_1 {
+    width: 40%;
+    border-left: 2px solid #959595;
+    border-bottom: 2px solid #959595;
     box-sizing: border-box;
-    border-radius: 2px; }
-    .index_img__block img {
+    border-radius: 2px;
+    margin-top: 20px;
+    padding: 12px 0 33px 30px; }
+    .index_img__block_1 img {
       width: 100%;
       height: 100%;
+      object-fit: cover; }
+  .index_img__block_2 {
+    width: 40%;
+    position: absolute;
+    top: -50%;
+    left: 40%;
+    margin-left: 48px; }
+    .index_img__block_2_wrapper {
+      border: 1px solid #FFFFFF;
+      padding: 39px 36px 0 36px; }
+    .index_img__block_2 img {
+      margin-top: 15px;
+      width: 100%;
+      height: 100%;
+      padding-bottom: 30px;
       object-fit: cover;
-      padding: 12px 0 33px 30px; }
+      border-bottom: 2px solid #959595; }
+
+.block__text {
+  max-width: 448px;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0 auto; }
+  .block__text_2 {
+    margin-top: 30px;
+    width: 100%;
+    font-size: 20px;
+    line-height: 23px;
+    color: #1F1B20;
+    padding: 0 36px; }
 
 .btn_wrapper {
   margin-top: 40px; }
