--- a/static/development/components/common_componentc/header/index.scss
+++ b/static/development/components/common_componentc/header/index.scss
@@ -12,6 +12,7 @@
             line-height: 18px;
             text-transform: uppercase;
             padding-bottom: 10px;
+            font-weight: 300;
             &:hover {
                 color: #FFFFFF;
                 border-bottom: 1px solid #F2C94C;
