--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="/static/source/fonts/fonts.css">
+    <link rel="stylesheet" href="/static/source/fonts/stylesheet.css">
     <link rel="stylesheet" href="/static/source/pages/index/index.css">
 </head>
 <body>
@@ -99,7 +99,150 @@
                 </div>
             </div>
         </div>
+        <div class="steps container">
+            <div class="steps__title">
+                Етапи роботи
+            </div>
+            <div class="steps_wrapper">
+                <div class="steps_item">
+                    <div class="steps_item__img">
+                        <div class="steps_item__number">1</div>
+                        <img src="/static/source/img/index/stages-work/Rectangle 12.png" alt="">
+                    </div>
+                    <div class="steps_item__text">
+                        Наш менеджер зв’жеться із вами, для обговорення та узгодження усіх деталей
+                    </div>
+                </div>
+                <div class="steps_item">
+                    <div class="steps_item__img">
+                        <div class="steps_item__number">2</div>
+                        <img src="/static/source/img/index/stages-work/Rectangle 12 (1).png" alt="">
+                    </div>
+                    <div class="steps_item__text"> 
+                        Зустріч із дизайнерами чи архітекторами безпосередньо на об’єкті
+                    </div>
+                </div>
+                <div class="steps_item">
+                    <div class="steps_item__img">
+                        <div class="steps_item__number">3</div>
+                        <img src="/static/source/img/index/stages-work/Rectangle 12 (2).png" alt="">
+                    </div>
+                    <div class="steps_item__text">
+                        Підписання договору про співпрацю
+                    </div>
+                </div>
+                <div class="steps_item">
+                    <div class="steps_item__img">
+                        <div class="steps_item__number">4</div>
+                        <img src="/static/source/img/index/stages-work/Rectangle 13.png" alt="">
+                    </div>
+                    <div class="steps_item__text">
+                        Створення та реалізація унікального проєкту командою INNEX
+                    </div>
+                </div>
+            </div>
+            <div class="steps_btn">
+                <div class="steps_btn__block">
+                    <a href="#" class="btn_standart">
+                        Замовити проект
+                    </a>
+                </div>
+                <div class="steps_btn__block portfolio__btn">
+                    <a href="#">
+                        Наше портфоліо
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer_title">
+            <div class="footer_title__text">
+                Слідкуй за нами  innex.ua
+            </div>
+            <div class="footer_title_social">
+                <a href="#">
+                    <img src="/static/source/img/footer/Frame 15.svg" alt="">
+                </a>
+                <a href="#">
+                    <img src="/static/source/img/footer/Frame 14.svg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="footer__img">
+            <img src="/static/source/img/footer/Rectangle 19.png" alt="">
+            <img src="/static/source/img/footer/Rectangle 20.png" alt="">
+            <img src="/static/source/img/footer/Rectangle 21.png" alt="">
+            <img src="/static/source/img/footer/Rectangle 22.png" alt="">
+            <img src="/static/source/img/footer/Rectangle 23.png" alt="">
+        </div>
+        <div class="footer_bottom">
+            <div class="google_maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2571.885995221748!2d24.04629781608419!3d49.86338613737066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473adce2a8be56e7%3A0x2e3ff3c0713e64c0!2sBohdana%20Khmel&#39;nyts&#39;koho%20St%2C%20223%2C%20L&#39;viv%2C%20L&#39;vivs&#39;ka%20oblast%2C%2079000!5e0!3m2!1sen!2sua!4v1641501621307!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="footer_bottom_right"> 
+                <div class="contacts_info">
+                    <div class="contacts_info_section contacts_info__address">
+                        <img src="/static/source/img/footer/carbon_location-filled.svg" alt="">
+                        <span class="contacts_info_section__text">
+                            місто Львів, вулиця Богдана Хмельницького 223 В
+                        </span>
+                    </div>
+                    <div class="contacts_info_section contacts_info__phone">
+                        <div>
+                            <img src="/static/source/img/footer/bi_phone-fill.svg" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <a href="tel:+ 38 (093) 015 83 24" class="contacts_info_section__text">+ 38 (093) 015 83 24</a>
+                            </div>
+                            <div class="contacts_info_section__text">
+                                Пн-Пт  9 00  - 18 00  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact_us">
+                    <button class="btn_standart">
+                        Зв’язатися з нами
+                    </button>
+                </div>
+                <div class="sections_container">
+                    <div class="sections_container__item">
+                        <a href="#">
+                            Архітектура
+                        </a>
+                    </div>
+                    <div class="sections_container__item">
+                        <a href="#">
+                            Дизайн
+                        </a>
+                    </div>
+                    <div class="sections_container__item">
+                        <a href="#">
+                            еТАПИ РОБОТИ
+                        </a>
+                    </div>
+                    <div class="sections_container__item">
+                        <a href="#">
+                            кОМАНДА
+                        </a>
+                    </div>
+                    <div class="sections_container__item">
+                        <a href="#">
+                            КОНТАКТИ
+                        </a>
+                    </div>
+                </div>
+                <div class="sw-logo">
+                    <a href="#">
+                        <img src="/static/source/img/footer/sw-logo 1.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
     
     <script src="/static/source/pages/index/index.js"></script>
 
