--- a/static/development/components/common_componentc/footer/index.scss
+++ b/static/development/components/common_componentc/footer/index.scss
@@ -27,6 +27,7 @@
             width: 50%;
             iframe {
                 width: 100%;
+                height: 100%;
             }
         }
         &_right {
