--- a/static/source/pages/index/index.css
+++ b/static/source/pages/index/index.css
@@ -1152,7 +1152,8 @@ input::-webkit-inner-spin-button {
   .footer_bottom .google_maps {
     width: 50%; }
     .footer_bottom .google_maps iframe {
-      width: 100%; }
+      width: 100%;
+      height: 100%; }
   .footer_bottom_right {
     width: 50%; }
     .footer_bottom_right .contacts_info {
