--- a/templates/team.html
+++ b/templates/team.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>team</title>
     <link rel="stylesheet" href="/static/source/fonts/stylesheet.css">
-    <link rel="stylesheet" href="/static/source/pages/index/index.css">
+    <link rel="stylesheet" href="/static/source/pages/team/index.css">
 </head>
 <body>
 
@@ -43,9 +43,9 @@
         </div>
     </header>
 
-    <section class="index first_padding">
-        <div class="index_top">
-            <div class="top_title" style="background: url(/static/source/img/index/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
+    <section class="team first_padding"> 
+        <div class="top">
+            <div class="top_title" style="background: url(/static/source/img/team/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
                 <div class="top_social">
                     <div class="top_social__line top_social__line_1">
                     </div>
@@ -63,94 +63,36 @@
                     </div>
                 </div>
                 <div class="top_title_wrapper">
-                    <div class="top_title_1">
-                        <span>
-                            Архітектура
-                        </span>
+                    <div class="top_title_1-white">
                         <img src="/static/source/img/index/Rectangle 4.svg" alt="">
-                    </div>
-                    <div class="top_title_2">
-                        - це мистецтво, нічого більше
-                    </div>
-                    <div class="btn_wrapper">
-                        <a href="#" class="btn_standart">
-                            Замовити проект
-                        </a>
+                        <span>
+                            Наша команда
+                        </span>
                     </div>
                 </div>
             </div>
             <div class="top_img container">
-                <div class="top_img__block_1">
-                    <img src="/static/source/img/index/Rectangle 7.png" alt="">
+                <div>
+                    <img src="/static/source/img/team/Frame 72.png" alt="">
+                    <div>
+                        <img src="/static/source/img/index/Rectangle 4.svg" alt="">
+                        <span>
+                            Вікторія Циганок
+                        </span>
+                    </div>
+                    <div>
+                        Дизайнерка
+                    </div>
                 </div>
                 <div class="top_img__block_2">
                     <div class="top_img__block_2_wrapper">
-                        <div class="block__text">
-                            Ми створюємо затишок на кожній 
-                            вуличці та у кожній квартирі чи будинку
-                        </div>
-                        <img src="/static/source/img/index/Rectangle 5.png" alt="">
+                        <img src="/static/source/img/team/Rectangle 5.png" alt="">
                     </div>
                     <div class="block__text_2">
-                        <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
-                        Вишуканий чи лаконічний дизайн інтер’єру, 
-                        багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
+                        Творча, життєрадісна, добра.
+                        Обожнює читати романи та у вільний час дивитись 
+                        художні фільми та цікавиться культурою країн Ближнього Сходу.
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="steps container">
-            <div class="steps__title">
-                Етапи роботи
-            </div>
-            <div class="steps_wrapper">
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">1</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12.png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Наш менеджер зв’жеться із вами, для обговорення та узгодження усіх деталей
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">2</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12 (1).png" alt="">
-                    </div>
-                    <div class="steps_item__text"> 
-                        Зустріч із дизайнерами чи архітекторами безпосередньо на об’єкті
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">3</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12 (2).png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Підписання договору про співпрацю
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">4</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 13.png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Створення та реалізація унікального проєкту командою INNEX
-                    </div>
-                </div>
-            </div>
-            <div class="steps_btn">
-                <div class="steps_btn__block">
-                    <a href="#" class="btn_standart">
-                        Замовити проект
-                    </a>
-                </div>
-                <div class="steps_btn__block portfolio__btn">
-                    <a href="#">
-                        Наше портфоліо
-                    </a>
                 </div>
             </div>
         </div>
@@ -243,8 +185,8 @@
             </div>
         </div>
     </footer>
-    
-    <script src="/static/source/pages/index/index.js"></script>
 
+    <script src="/static/source/pages/team/index.js"></script>
+    
 </body>
 </html>
