--- a/static/source/pages/team/index.css
+++ b/static/source/pages/team/index.css
@@ -1281,63 +1281,12 @@ input::-webkit-inner-spin-button {
 .btn_wrapper {
   margin-top: 40px; }
 
-.steps__title {
-  margin: 100px 0 30px 0;
-  font-size: 30px;
-  line-height: 35px;
-  text-transform: uppercase;
-  color: #1F1B20;
-  font-weight: 500;
-  text-align: center; }
-
-.steps_wrapper {
-  display: flex;
-  justify-content: space-between; }
-
-.steps_item {
-  width: 23%;
-  padding: 25px;
-  background: #FFFFFF;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
-  border-radius: 2px; }
-  .steps_item__number {
+.top_title {
+  position: relative; }
+  .top_title_wrapper {
     position: absolute;
-    bottom: 0;
-    font-size: 150px;
-    line-height: 176px;
-    text-transform: uppercase;
-    color: #E0E0E0;
-    display: flex; }
-  .steps_item__img {
-    position: relative;
-    height: 50%; }
-    .steps_item__img img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .steps_item__text {
-    margin-top: 50px;
-    padding: 5%;
-    font-size: 20px;
-    line-height: 23px;
-    color: #1F1B20; }
-
-.steps_btn {
-  margin-top: 40px;
-  display: flex;
-  justify-content: center; }
-  .steps_btn .steps_btn__block {
-    margin-right: 15px; }
-  .steps_btn .portfolio__btn a {
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px rgba(242, 201, 76, 0.2);
-    color: #1F1B20;
-    font-size: 15px;
-    line-height: 18px;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 21px 30px;
-    border: 1px solid #000000; }
+    top: 20px;
+    right: 0; }
 
 
 /*# sourceMappingURL=index.css.map*/
