--- a/static/source/pages/architect/index.css
+++ b/static/source/pages/architect/index.css
@@ -1281,63 +1281,67 @@ input::-webkit-inner-spin-button {
 .btn_wrapper {
   margin-top: 40px; }
 
-.steps__title {
-  margin: 100px 0 30px 0;
-  font-size: 30px;
-  line-height: 35px;
-  text-transform: uppercase;
-  color: #1F1B20;
-  font-weight: 500;
-  text-align: center; }
-
-.steps_wrapper {
+.plans {
   display: flex;
-  justify-content: space-between; }
+  height: 100%; }
+  .plans_wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-left: 70px;
+    width: calc(100% - 70px); }
+  .plans_card {
+    width: 30%;
+    height: 80%; }
+    .plans_card__title {
+      font-size: 30px;
+      line-height: 35px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      font-weight: bold;
+      margin-bottom: 30px;
+      text-align: center; }
+    .plans_card_wrapper {
+      height: 88%;
+      padding: 15%;
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid #FFFFFF;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+    .plans_card_services li {
+      font-size: 18px;
+      line-height: 21px;
+      color: #FFFFFF;
+      font-weight: 300;
+      margin-bottom: 30px; }
+    .plans_card_price {
+      border-top: 1px solid #F2C94C;
+      padding-top: 25px;
+      font-size: 18px;
+      line-height: 21px;
+      color: #FFFFFF;
+      font-weight: 300;
+      text-align: center; }
+    .plans_card__btn {
+      margin-top: 50px;
+      text-align: center; }
 
-.steps_item {
-  width: 23%;
-  padding: 25px;
-  background: #FFFFFF;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
-  border-radius: 2px; }
-  .steps_item__number {
-    position: absolute;
-    bottom: 0;
-    font-size: 150px;
-    line-height: 176px;
-    text-transform: uppercase;
-    color: #E0E0E0;
-    display: flex; }
-  .steps_item__img {
-    position: relative;
-    height: 50%; }
-    .steps_item__img img {
+.block_img {
+  margin-top: 150px;
+  display: flex;
+  flex-wrap: wrap; }
+  .block_img__item {
+    width: 50%; }
+    .block_img__item img {
       width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .steps_item__text {
-    margin-top: 50px;
-    padding: 5%;
-    font-size: 20px;
-    line-height: 23px;
-    color: #1F1B20; }
+      height: 100%; }
 
-.steps_btn {
-  margin-top: 40px;
-  display: flex;
-  justify-content: center; }
-  .steps_btn .steps_btn__block {
-    margin-right: 15px; }
-  .steps_btn .portfolio__btn a {
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px rgba(242, 201, 76, 0.2);
-    color: #1F1B20;
-    font-size: 15px;
-    line-height: 18px;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 21px 30px;
-    border: 1px solid #000000; }
+.block_video {
+  margin-top: 60px; }
+  .block_video video {
+    width: 100%; }
 
 
 /*# sourceMappingURL=index.css.map*/
