--- a/static/source/pages/team/index.css
+++ b/static/source/pages/team/index.css
@@ -1186,81 +1186,81 @@ input::-webkit-inner-spin-button {
       text-align: center;
       margin-top: 40px; }
 
-.top_title {
-  color: #FFFFFF;
-  text-transform: uppercase;
-  padding: 15% 28%;
-  text-align: center; }
-  .top_title_wrapper {
+.top {
+  height: 800px; }
+  .top_title {
+    color: #FFFFFF;
+    text-transform: uppercase;
+    padding: 15% 28%;
+    text-align: center; }
+    .top_title_wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; }
+    .top_title_1 {
+      font-size: 90px;
+      line-height: 105px;
+      white-space: nowrap;
+      font-weight: bold; }
+    .top_title_1-white {
+      font-size: 90px;
+      line-height: 105px;
+      white-space: nowrap;
+      font-weight: bold; }
+      .top_title_1-white span {
+        opacity: 0.2; }
+    .top_title_2 {
+      font-size: 30px;
+      line-height: 35px;
+      font-weight: 300; }
+  .top_img {
+    display: flex;
+    margin-left: 20px;
+    width: calc(100% - 20px); }
+    .top_img__block_1 {
+      width: 40%;
+      border-left: 2px solid #959595;
+      border-bottom: 2px solid #959595;
+      box-sizing: border-box;
+      border-radius: 2px;
+      margin-top: 20px;
+      padding: 12px 0 33px 30px; }
+      .top_img__block_1 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+    .top_img__block_2 {
+      width: 40%;
+      position: absolute;
+      top: -50%;
+      left: 40%;
+      margin-left: 48px; }
+      .top_img__block_2_wrapper {
+        border: 1px solid #FFFFFF;
+        padding: 39px 36px 0 36px; }
+      .top_img__block_2 img {
+        margin-top: 15px;
+        width: 100%;
+        height: 100%;
+        padding-bottom: 30px;
+        object-fit: cover;
+        border-bottom: 2px solid #959595; }
+  .top_social {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; }
-  .top_title_1 {
-    font-size: 90px;
-    line-height: 105px;
-    white-space: nowrap;
-    font-weight: bold; }
-  .top_title_1-white {
-    font-size: 90px;
-    line-height: 105px;
-    white-space: nowrap;
-    font-weight: bold; }
-    .top_title_1-white span {
-      opacity: 0.2; }
-  .top_title_2 {
-    font-size: 30px;
-    line-height: 35px;
-    font-weight: 300; }
-
-.top_img {
-  display: flex;
-  margin-left: 20px;
-  width: calc(100% - 20px); }
-  .top_img__block_1 {
-    width: 40%;
-    border-left: 2px solid #959595;
-    border-bottom: 2px solid #959595;
-    box-sizing: border-box;
-    border-radius: 2px;
-    margin-top: 20px;
-    padding: 12px 0 33px 30px; }
-    .top_img__block_1 img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .top_img__block_2 {
-    width: 40%;
     position: absolute;
-    top: -50%;
-    left: 40%;
-    margin-left: 48px; }
-    .top_img__block_2_wrapper {
+    left: 5%; }
+    .top_social__line {
+      position: absolute;
+      left: 20px;
+      width: 0px;
+      height: 430px;
       border: 1px solid #FFFFFF;
-      padding: 39px 36px 0 36px; }
-    .top_img__block_2 img {
-      margin-top: 15px;
-      width: 100%;
-      height: 100%;
-      padding-bottom: 30px;
-      object-fit: cover;
-      border-bottom: 2px solid #959595; }
-
-.top_social {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  left: 5%; }
-  .top_social__line {
-    position: absolute;
-    left: 20px;
-    width: 0px;
-    height: 430px;
-    border: 1px solid #FFFFFF;
-    opacity: 0.5; }
-    .top_social__line_1 {
-      top: -460px; }
-    .top_social__line_2 {
-      top: 120px; }
+      opacity: 0.5; }
+      .top_social__line_1 {
+        top: -460px; }
+      .top_social__line_2 {
+        top: 120px; }
 
 .block__text {
   max-width: 448px;
