--- a/templates/architect.html
+++ b/templates/architect.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="plans container">
-            <div class="plans_wrapper container">
+            <div class="plans_wrapper">
                 <div class="plans_card">
                     <div class="plans_card__title">
                         Basic
