--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -1,9 +1,13 @@
 .top {
-    height: 800px;
+    height: 45vw;
+    min-height: 400px;
+    width: 100%;
+    position: relative;
+    //overflow: hidden;
     &_title {
         color: #FFFFFF;
         text-transform: uppercase;
-        padding: 15% 28%;
+        padding: 10% 28%;
         text-align: center;
         &_wrapper {
             display: flex;
@@ -31,57 +35,22 @@
             font-weight: 300;
         }
     }
-    &_img {
-        display: flex;
-        margin-left: 20px;
-        width: calc(100% - 20px);
-        &__block_1 {
-            width: 40%;
-            border-left: 2px solid #959595;
-            border-bottom: 2px solid #959595;
-            box-sizing: border-box;
-            border-radius: 2px;
-            margin-top: 20px;
-            padding: 12px 0 33px 30px;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-        &__block_2 {
-            width: 40%;
-            position: absolute;
-            //top: -293px;
-            top: -50%;
-            left: 40%;
-            margin-left: 48px;
-
-            &_wrapper {
-                border: 1px solid #FFFFFF;
-                padding: 39px 36px 0 36px;
-            }
-            img {
-                margin-top: 15px;
-                width: 100%;
-                height: 100%;
-                padding-bottom: 30px;
-                object-fit: cover;
-                border-bottom: 2px solid #959595;
-            }
-            
-        }
-    }
     &_social {
         display: flex;
         flex-direction: column;
         position: absolute;
         left: 5%;
+        top: 45%;
+        height: 100%;
+        &__block {
+            z-index: 10;
+        }
         &__line {
             position: absolute;
             left: 20px;
             width: 0px;
-            height: 430px;
+            //height: 430px;
+            //height: 45%;
             border: 1px solid #FFFFFF;
             opacity: 0.5;
             &_1 {
@@ -91,6 +60,48 @@
                 top: 120px;
             }
         }
+    }
+}
+
+.top_img {
+    display: flex;
+    margin-left: 20px;
+    width: calc(100% - 20px);
+    &__block_1 {
+        width: 40%;
+        border-left: 2px solid #959595;
+        border-bottom: 2px solid #959595;
+        box-sizing: border-box;
+        border-radius: 2px;
+        margin-top: 20px;
+        padding: 12px 0 33px 30px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &__block_2 {
+        width: 40%;
+        position: absolute;
+        //top: -293px;
+        top: -50%;
+        left: 40%;
+        margin-left: 48px;
+
+        &_wrapper {
+            border: 1px solid #FFFFFF;
+            padding: 39px 36px 0 36px;
+        }
+        img {
+            margin-top: 15px;
+            width: 100%;
+            height: 100%;
+            padding-bottom: 30px;
+            object-fit: cover;
+            border-bottom: 2px solid #959595;
+        }
+        
     }
 }
 
