--- a/static/source/pages/architect/index.css
+++ b/static/source/pages/architect/index.css
@@ -1187,11 +1187,14 @@ input::-webkit-inner-spin-button {
       margin-top: 40px; }
 
 .top {
-  height: 800px; }
+  height: 45vw;
+  min-height: 400px;
+  width: 100%;
+  position: relative; }
   .top_title {
     color: #FFFFFF;
     text-transform: uppercase;
-    padding: 15% 28%;
+    padding: 10% 28%;
     text-align: center; }
     .top_title_wrapper {
       display: flex;
@@ -1213,54 +1216,58 @@ input::-webkit-inner-spin-button {
       font-size: 30px;
       line-height: 35px;
       font-weight: 300; }
-  .top_img {
-    display: flex;
-    margin-left: 20px;
-    width: calc(100% - 20px); }
-    .top_img__block_1 {
-      width: 40%;
-      border-left: 2px solid #959595;
-      border-bottom: 2px solid #959595;
-      box-sizing: border-box;
-      border-radius: 2px;
-      margin-top: 20px;
-      padding: 12px 0 33px 30px; }
-      .top_img__block_1 img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; }
-    .top_img__block_2 {
-      width: 40%;
-      position: absolute;
-      top: -50%;
-      left: 40%;
-      margin-left: 48px; }
-      .top_img__block_2_wrapper {
-        border: 1px solid #FFFFFF;
-        padding: 39px 36px 0 36px; }
-      .top_img__block_2 img {
-        margin-top: 15px;
-        width: 100%;
-        height: 100%;
-        padding-bottom: 30px;
-        object-fit: cover;
-        border-bottom: 2px solid #959595; }
   .top_social {
     display: flex;
     flex-direction: column;
     position: absolute;
-    left: 5%; }
+    left: 5%;
+    top: 45%;
+    height: 100%; }
+    .top_social__block {
+      z-index: 10; }
     .top_social__line {
       position: absolute;
       left: 20px;
       width: 0px;
-      height: 430px;
       border: 1px solid #FFFFFF;
       opacity: 0.5; }
       .top_social__line_1 {
         top: -460px; }
       .top_social__line_2 {
         top: 120px; }
+
+.top_img {
+  display: flex;
+  margin-left: 20px;
+  width: calc(100% - 20px); }
+  .top_img__block_1 {
+    width: 40%;
+    border-left: 2px solid #959595;
+    border-bottom: 2px solid #959595;
+    box-sizing: border-box;
+    border-radius: 2px;
+    margin-top: 20px;
+    padding: 12px 0 33px 30px; }
+    .top_img__block_1 img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .top_img__block_2 {
+    width: 40%;
+    position: absolute;
+    top: -50%;
+    left: 40%;
+    margin-left: 48px; }
+    .top_img__block_2_wrapper {
+      border: 1px solid #FFFFFF;
+      padding: 39px 36px 0 36px; }
+    .top_img__block_2 img {
+      margin-top: 15px;
+      width: 100%;
+      height: 100%;
+      padding-bottom: 30px;
+      object-fit: cover;
+      border-bottom: 2px solid #959595; }
 
 .block__text {
   max-width: 448px;
