--- a/templates/index.html
+++ b/templates/index.html
@@ -43,115 +43,115 @@
         </div>
     </header>
 
-    <section class="index first_padding">
-        <div class="index_top">
-            <div class="top_title" style="background: url(/static/source/img/index/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
-                <div class="top_social">
-                    <div class="top_social__line top_social__line_1">
-                    </div>
-                    <div class="top_social__block">
-                        <a href="#">
-                            <img src="/static/source/img/index/Frame 15.svg" alt="">
-                        </a>
-                    </div>
-                    <div class="top_social__block">
-                        <a href="#">
-                            <img src="/static/source/img/index/Frame 14.svg" alt="">
-                        </a>
-                    </div>
-                    <div class="top_social__line top_social__line_2">
-                    </div>
+    <section class="top first_padding" style="background: url(/static/source/img/index/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
+        <div class="top_title">
+            <div class="top_social">
+                <div class="top_social__line top_social__line_1">
                 </div>
-                <div class="top_title_wrapper">
-                    <div class="top_title_1">
-                        <span>
-                            Архітектура
-                        </span>
-                        <img src="/static/source/img/index/Rectangle 4.svg" alt="">
-                    </div>
-                    <div class="top_title_2">
-                        - це мистецтво, нічого більше
-                    </div>
-                    <div class="btn_wrapper">
-                        <a href="#" class="btn_standart">
-                            Замовити проект
-                        </a>
-                    </div>
+                <div class="top_social__block">
+                    <a href="#">
+                        <img src="/static/source/img/index/Frame 15.svg" alt="">
+                    </a>
+                </div>
+                <div class="top_social__block">
+                    <a href="#">
+                        <img src="/static/source/img/index/Frame 14.svg" alt="">
+                    </a>
+                </div>
+                <div class="top_social__line top_social__line_2">
                 </div>
             </div>
-            <div class="top_img container">
-                <div class="top_img__block_1">
-                    <img src="/static/source/img/index/Rectangle 7.png" alt="">
+            <div class="top_title_wrapper">
+                <div class="top_title_1">
+                    <span>
+                        Архітектура
+                    </span>
+                    <img src="/static/source/img/index/Rectangle 4.svg" alt="">
                 </div>
-                <div class="top_img__block_2">
-                    <div class="top_img__block_2_wrapper">
-                        <div class="block__text">
-                            Ми створюємо затишок на кожній 
-                            вуличці та у кожній квартирі чи будинку
-                        </div>
-                        <img src="/static/source/img/index/Rectangle 5.png" alt="">
-                    </div>
-                    <div class="block__text_2">
-                        <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
-                        Вишуканий чи лаконічний дизайн інтер’єру, 
-                        багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
-                    </div>
+                <div class="top_title_2">
+                    - це мистецтво, нічого більше
                 </div>
-            </div>
-        </div>
-        <div class="steps container">
-            <div class="steps__title">
-                Етапи роботи
-            </div>
-            <div class="steps_wrapper">
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">1</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12.png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Наш менеджер зв’жеться із вами, для обговорення та узгодження усіх деталей
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">2</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12 (1).png" alt="">
-                    </div>
-                    <div class="steps_item__text"> 
-                        Зустріч із дизайнерами чи архітекторами безпосередньо на об’єкті
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">3</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 12 (2).png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Підписання договору про співпрацю
-                    </div>
-                </div>
-                <div class="steps_item">
-                    <div class="steps_item__img">
-                        <div class="steps_item__number">4</div>
-                        <img src="/static/source/img/index/stages-work/Rectangle 13.png" alt="">
-                    </div>
-                    <div class="steps_item__text">
-                        Створення та реалізація унікального проєкту командою INNEX
-                    </div>
-                </div>
-            </div>
-            <div class="steps_btn">
-                <div class="steps_btn__block">
+                <div class="btn_wrapper">
                     <a href="#" class="btn_standart">
                         Замовити проект
                     </a>
                 </div>
-                <div class="steps_btn__block portfolio__btn">
-                    <a href="#">
-                        Наше портфоліо
-                    </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="top_img container">
+        <div class="top_img__block_1">
+            <img src="/static/source/img/index/Rectangle 7.png" alt="">
+        </div>
+        <div class="top_img__block_2">
+            <div class="top_img__block_2_wrapper">
+                <div class="block__text">
+                    Ми створюємо затишок на кожній 
+                    вуличці та у кожній квартирі чи будинку
                 </div>
+                <img src="/static/source/img/index/Rectangle 5.png" alt="">
+            </div>
+            <div class="block__text_2">
+                <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
+                Вишуканий чи лаконічний дизайн інтер’єру, 
+                багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
+            </div>
+        </div>
+    </section>
+
+    <section class="steps container">
+        <div class="steps__title">
+            Етапи роботи
+        </div>
+        <div class="steps_wrapper">
+            <div class="steps_item">
+                <div class="steps_item__img">
+                    <div class="steps_item__number">1</div>
+                    <img src="/static/source/img/index/stages-work/Rectangle 12.png" alt="">
+                </div>
+                <div class="steps_item__text">
+                    Наш менеджер зв’жеться із вами, для обговорення та узгодження усіх деталей
+                </div>
+            </div>
+            <div class="steps_item">
+                <div class="steps_item__img">
+                    <div class="steps_item__number">2</div>
+                    <img src="/static/source/img/index/stages-work/Rectangle 12 (1).png" alt="">
+                </div>
+                <div class="steps_item__text"> 
+                    Зустріч із дизайнерами чи архітекторами безпосередньо на об’єкті
+                </div>
+            </div>
+            <div class="steps_item">
+                <div class="steps_item__img">
+                    <div class="steps_item__number">3</div>
+                    <img src="/static/source/img/index/stages-work/Rectangle 12 (2).png" alt="">
+                </div>
+                <div class="steps_item__text">
+                    Підписання договору про співпрацю
+                </div>
+            </div>
+            <div class="steps_item">
+                <div class="steps_item__img">
+                    <div class="steps_item__number">4</div>
+                    <img src="/static/source/img/index/stages-work/Rectangle 13.png" alt="">
+                </div>
+                <div class="steps_item__text">
+                    Створення та реалізація унікального проєкту командою INNEX
+                </div>
+            </div>
+        </div>
+        <div class="steps_btn">
+            <div class="steps_btn__block">
+                <a href="#" class="btn_standart">
+                    Замовити проект
+                </a>
+            </div>
+            <div class="steps_btn__block portfolio__btn">
+                <a href="#">
+                    Наше портфоліо
+                </a>
             </div>
         </div>
     </section>
