--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -50,21 +50,20 @@
         &__block {
             z-index: 10;
         }
-        &__line {
-            position: absolute;
-            left: 20px;
-            width: 0px;
-            //height: 430px;
-            //height: 45%;
-            border: 1px solid #FFFFFF;
-            opacity: 0.5;
-            &_1 {
-                top: -460px;
-            }
-            &_2 {
-                top: 120px;
-            }
-        }
+        // &__line {
+        //     position: absolute;
+        //     left: 20px;
+        //     width: 0px;
+        //     height: 25vw;
+        //     border: 1px solid #FFFFFF;
+        //     opacity: 0.5;
+        //     &_1 {
+        //         top: -460px;
+        //     }
+        //     &_2 {
+        //         top: 120px;
+        //     }
+        // }
     }
 }
 
@@ -89,11 +88,7 @@
 }
 
 .top_img__block_2 {
-    @media (max-width: 992px ) {
-        width: 50%;
-    }
     width: 100%;
-    //position: absolute;
     //top: -50%;
     //top: -280px;
     //left: 40%;
