--- a/templates/design.html
+++ b/templates/design.html
@@ -70,22 +70,12 @@
                         <div class="plans_card_services">
                             <ul>
                                 <li>
-                                    Архітектурне рішення ( 2 варіанти)
-                                </li>
-                                <li>
-                                    Необхідні розрізи
-                                </li>
-                                <li>
-                                    Техніко-економічні показники
-                                </li>
-                                <li>
-                                    Схема генплану
+                                    створення технічних креслень
                                 </li>
                             </ul>
                         </div>
                         <div class="plans_card_price">
-                            від
-                            12  $/ м²
+                            10-15  $/ м²
                         </div>
                     </div>
                     <div class="plans_card__btn">
@@ -105,16 +95,17 @@
                                     план “Basic”
                                 </li>
                                 <li>
-                                    3D візуалізація будівлі
+                                    3D візуалізація проєкту
+                                    розгортки стін
                                 </li>
                                 <li>
-                                    у подарунок: разова онлайн-консультація архітектора
+                                    у подарунок: разова онлайн-консультація дизайнера
                                 </li>
                             </ul>
                         </div>
                         <div class="plans_card_price">
                             від
-                            15  $/ м²
+                            20-25  $/ м²
                         </div>
                     </div>
                     <div class="plans_card__btn">
@@ -134,10 +125,7 @@
                                     план “Standart”
                                 </li>
                                 <li>
-                                    створення конструктивного проєкту 
-                                </li>
-                                <li>
-                                    розрахунок вартості будівництва, створення кошторису
+                                    підбір матеріалів 
                                 </li>
                                 <li>
                                     авторський нагляд
@@ -146,7 +134,7 @@
                         </div>
                         <div class="plans_card_price">
                             від
-                            19  $/ м²
+                            25  $/ м²
                         </div>
                     </div>
                     <div class="plans_card__btn">
