--- a/static/development/components/common_componentc/plans/index.scss
+++ b/static/development/components/common_componentc/plans/index.scss
@@ -1,17 +1,33 @@
 .plans {
+    @media (max-width: 800px) {
+        margin-top: 0px;
+    }
     display: flex; 
-    height: 100%;
+    margin-top: 100px;
     &_wrapper {
+        @media (max-width: 800px) {
+            margin-left: 0px;
+            width: 100%;
+        }
         display: flex;
         justify-content: space-around;
-        align-items: flex-end;
+        align-items: stretch;
+        flex-wrap: wrap;
         //margin-top: 100px;
         margin-left: 70px;
         width: calc(100% - 70px);
+        height: 100%;
     }
     &_card {
+        @media (max-width: 1300px) {
+            width: 45%;
+            margin-bottom: 120px;
+        }
+        @media (max-width: 800px) {
+            width: 100%;
+        }
         width: 30%;
-        height: 80%;
+        height: auto;
         &__title {
             font-size: 30px;
             line-height: 35px;
