--- a/static/source/pages/architect/index.css
+++ b/static/source/pages/architect/index.css
@@ -1112,10 +1112,30 @@ input::-webkit-inner-spin-button {
   position: fixed;
   top: 0;
   background: #1F1B20;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   z-index: 100; }
+  @media (max-width: 992px) {
+    .header {
+      padding: 0; } }
+  .header_main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    @media (max-width: 992px) {
+      .header_main {
+        display: none;
+        position: fixed;
+        flex-direction: column;
+        top: 104px;
+        background: black;
+        width: 90%;
+        height: 100%; }
+        .header_main.active {
+          display: flex; } }
+  .header_mob {
+    display: none; }
+    @media (max-width: 992px) {
+      .header_mob {
+        display: flex; } }
   .header_sections a {
     color: #828282;
     font-size: 15px;
@@ -1123,11 +1143,54 @@ input::-webkit-inner-spin-button {
     text-transform: uppercase;
     padding-bottom: 10px;
     font-weight: 300; }
+    @media (max-width: 992px) {
+      .header_sections a {
+        color: #F2C94C; } }
     .header_sections a:hover {
       color: #FFFFFF;
       border-bottom: 1px solid #F2C94C; }
   .header_logo {
     padding: 10px 0 12px 0; }
+    @media (max-width: 992px) {
+      .header_logo {
+        margin: 0 auto; } }
+  .header_hamburger {
+    overflow: hidden;
+    position: relative;
+    margin-left: 30px;
+    top: 30px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .header_line {
+    transition: all .2s;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 18px;
+    margin: 4px 0;
+    cursor: pointer;
+    background: #F2C94C; }
+    .header_line_1 {
+      top: 10px; }
+    .header_line_2 {
+      top: 22px; }
+    .header_line_3 {
+      top: 34px; }
+
+.header.active .header_line_1 {
+  top: 22px;
+  transform: rotate(45deg); }
+
+.header.active .header_line_2 {
+  left: -100px; }
+
+.header.active .header_line_3 {
+  top: 22px;
+  transform: rotate(-45deg); }
 
 .footer_title {
   display: flex;
@@ -1186,19 +1249,24 @@ input::-webkit-inner-spin-button {
       display: flex;
       justify-content: space-around;
       margin-top: 40px; }
-      .footer_bottom_right .sections_container__item a {
-        color: #828282;
-        font-size: 15px;
-        line-height: 18px;
-        text-transform: uppercase;
-        padding-bottom: 10px;
-        font-weight: 300; }
+      @media (max-width: 600px) {
+        .footer_bottom_right .sections_container {
+          flex-direction: column;
+          align-items: center; } }
+      .footer_bottom_right .sections_container__item {
+        margin-right: 10px; }
+        .footer_bottom_right .sections_container__item a {
+          color: #828282;
+          font-size: 15px;
+          line-height: 18px;
+          text-transform: uppercase;
+          padding-bottom: 10px;
+          font-weight: 300; }
     .footer_bottom_right .sw-logo {
       text-align: center;
       margin-top: 40px; }
 
 .top {
-  height: 45.5vw;
   min-height: 400px;
   width: 100%;
   position: relative; }
@@ -1238,6 +1306,9 @@ input::-webkit-inner-spin-button {
     left: 5%;
     top: 45%;
     height: 100%; }
+    @media (max-width: 800px) {
+      .top_social {
+        display: none; } }
     .top_social__block {
       z-index: 10; }
 
@@ -1293,16 +1364,32 @@ input::-webkit-inner-spin-button {
 
 .plans {
   display: flex;
-  height: 100%; }
+  margin-top: 100px; }
+  @media (max-width: 800px) {
+    .plans {
+      margin-top: 0px; } }
   .plans_wrapper {
     display: flex;
     justify-content: space-around;
-    align-items: flex-end;
+    align-items: stretch;
+    flex-wrap: wrap;
     margin-left: 70px;
-    width: calc(100% - 70px); }
+    width: calc(100% - 70px);
+    height: 100%; }
+    @media (max-width: 800px) {
+      .plans_wrapper {
+        margin-left: 0px;
+        width: 100%; } }
   .plans_card {
     width: 30%;
-    height: 80%; }
+    height: auto; }
+    @media (max-width: 1300px) {
+      .plans_card {
+        width: 45%;
+        margin-bottom: 120px; } }
+    @media (max-width: 800px) {
+      .plans_card {
+        width: 100%; } }
     .plans_card__title {
       font-size: 30px;
       line-height: 35px;
